# inception_next_quantization

./: pyproject.toml
incept_next_quantization/inception_next/: convnext.py
incept_next_quantization/quantization/: pqt.py  quant_model.py
inceptnext_quantization/inception_next/: inceptionnext.py
inceptnext_quantization/quantization/: quant_model.py
