[tool.poetry]
name = "ineption_next_quantization"
version = "0.1.0"
description = ""
authors = ["v3code <vitalik.w555@gmail.com>"]
readme = "README.md"
packages = [{include = "ineption_next_quantization"}]

[tool.poetry.dependencies]
python = "^3.10"
timm = "^0.9.7"
torchvision = "^0.16.0"




[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.group.local.dependencies]
torch = {version = "^2.1.0+cpu", source = "torch-cpu"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
