[tool.poetry]
name = "incept_next_quantization"
version = "0.1.0"
description = ""
authors = ["v3code <vitalik.w555@gmail.com>"]
readme = "README.md"
packages = [{include = "incept_next_quantization"}]

[tool.poetry.dependencies]
python = "^3.10"
timm = "^0.9.7"
torchvision = "0.15.2"
torch = "2.0.1"
torchaudio = "2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
